@@ -15,8 +15,9 @@ namespace ContractConfigurator
     {
         public override bool RequirementMet(ConfiguredContract contract)
         {
-            return base.RequirementMet(contract) &&
-                GetCelestialBodySubtree().returnFromFlyby.IsComplete;
+            CelestialBodySubtree tree = GetCelestialBodySubtree();
+            return base.RequirementMet(contract) && tree.returnFromFlyby != null &&
+                tree.returnFromFlyby.IsComplete;
         }
 
         protected override string RequirementText()
